--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -3,10 +3,10 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home Page</ion-title>
+    <ion-title>About Page</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Home Page</h3>
+  <h3>About Page</h3>
 </ion-content>
